# discord-idle-killer

./: Cargo.toml  README.md  powerMonitor.js
src/: check_installed_clients.rs  eject.rs  inject.rs  main.rs
src/asar/: extract.rs  mod.rs  pack.rs
