[package]
name = "project-idle-killer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asar = "0.3.0"
dirs = "5.0.1"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.4.0"
